# Wifipedia-agent

./: .env.example  .gitignore  README.md  pyproject.toml
optimized_programs/: hotpotqa_miprov2_20260226_162801.json  hotpotqa_miprov2_20260226_183113.json  hotpotqa_miprov2_20260226_205326.json  hotpotqa_miprov2_20260227_130839.json  hotpotqa_miprov2_20260227_191204.json  hotpotqa_miprov2_20260302_164022.json
research_outputs/: hotpotqa_ace_offline_20260226_164614_predictions.jsonl  hotpotqa_ace_offline_20260226_164614_summary.json  hotpotqa_ace_offline_20260226_183320_predictions.jsonl  hotpotqa_ace_offline_20260226_183320_summary.json  hotpotqa_ace_offline_20260226_210949_predictions.jsonl  hotpotqa_ace_offline_20260226_210949_summary.json  hotpotqa_ace_offline_20260227_113736_predictions.jsonl  hotpotqa_ace_offline_20260227_113736_summary.json  hotpotqa_ace_offline_20260227_132555_predictions.jsonl  hotpotqa_ace_offline_20260227_132555_summary.json  hotpotqa_ace_offline_20260227_200546_predictions.jsonl  hotpotqa_ace_offline_20260227_200546_summary.json  hotpotqa_ace_offline_20260302_183020_predictions.jsonl  hotpotqa_ace_offline_20260302_183020_summary.json  hotpotqa_ace_online_20260226_165455_predictions.jsonl  hotpotqa_ace_online_20260226_165455_summary.json  hotpotqa_ace_online_20260226_183618_predictions.jsonl  hotpotqa_ace_online_20260226_183618_summary.json  hotpotqa_ace_online_20260226_213941_predictions.jsonl  hotpotqa_ace_online_20260226_213941_summary.json  hotpotqa_ace_online_20260227_140010_predictions.jsonl  pipeline_results.txt  (+8 more)
scripts/: __init__.py  (+15 more)
(+2 files in other folders)
